--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="Pass Port Size Photo.jpeg.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Anantha Krishnan</h1>
+            <img src="passport size image.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1>Sentamil Selvi T</h1>
             <p>Bsc.AI&ML</p>
         </div>
     </header>
@@ -177,14 +177,14 @@
         <div class="section-content">
             <center>
             <h2>certificate</h2>
-            <a href="Completion Certificate.pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="Common certificate.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
        
     </section>
 
     <footer>
-        <p>&copy; 2025 Anantha Krishnan</p>
+        <p>&copy; 2025 Sentamil Selvi T</p>
     </footer>
 
     <script>
